--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="dark_green">#005F73</color>
     <color name="gray_mid">#C4C4C4</color>
     <color name="item_color">#FFFFFF</color>
+    <color name="normal_text_black">#474747</color>
 
 
 
