--- a/app/src/main/res/layout/drop_down_item.xml
+++ b/app/src/main/res/layout/drop_down_item.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textSize="18sp"
-    android:textColor="@color/dark_green">
+    android:textSize="16sp"
+    android:textColor="@color/normal_text_black">
 
 </TextView>
